polish: Pandemonium (#2536)
* refactor: modernize

* test: opt into sidebar test

* fix: add sidebar step for the last "board ship" step

* fix: guide player to disempark at Port Sarim